Bug #21056  ndb pushdown equal/setValue error on datetime: only pushdown like of string type fields